[레거시 코드 리팩터링 - 2단계] 베로(김은솔) 미션 제출합니다. (#611)
* test: 상품 리스트 조회 테스트 추가

* test: then 검증 getter 사용하도록 변경

* docs: 요구사항 보강

* test: emptyList 사용하도록 변경

* test: 빠진 테스트 추가

* docs: 요구사항 추가

* refactor: 기본 생성자를 제거하고 생성자로 필드를 초기화하도록 변경

* refactor: 일급 컬렉션 객체 생성 및 값 객체 포장

* refactor: 컨트롤러가 DTO 를 전달받도록 변경

* refactor: 도메인 객체에 JPA 도입

* refactor: audit 설정

* refactor: 기존 dao 삭제

* refactor: 의존성 설정

* refactor: OrderService 인수 테스트 추가

* refactor: Response 객체 리턴하도록 변경

* test: 단위 테스트 작성

* refactor: 사용되지 않는 메서드, 클래스 제거

* refactor: 불필요한 검증 로직 제거

* fix: request 속성 값 변경하여 http 테스트 통과하도록 수정

* refactor: 메뉴 가격 검증 추가

* refactor: 하나의 쿼리로 메뉴 리스트가 모두 존재하는지 확인하도록 변경

* refactor: DB 에서 값을 가져오지 않도록 변경

* refactor: TableGroup 생성 시 OrderTables 연관관계 설정하도록 변경