@@ -5,17 +5,20 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 
-import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import kitchenpos.dao.MenuDao;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderLineItemDao;
-import kitchenpos.dao.OrderTableDao;
+import kitchenpos.application.dto.OrderChangeOrderStatusRequest;
+import kitchenpos.application.dto.OrderCreateRequest;
+import kitchenpos.application.dto.OrderLineItemCreateRequest;
+import kitchenpos.application.dto.OrderResponse;
+import kitchenpos.domain.Menu;
 import kitchenpos.domain.Order;
 import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.repository.MenuRepository;
+import kitchenpos.repository.OrderRepository;
+import kitchenpos.repository.OrderTableRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -27,16 +30,13 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class OrderServiceTest {
 
     @Mock
-    private MenuDao menuDao;
+    private MenuRepository menuRepository;
 
     @Mock
-    private OrderDao orderDao;
+    private OrderRepository orderRepository;
 
     @Mock
-    private OrderLineItemDao orderLineItemDao;
-
-    @Mock
-    private OrderTableDao orderTableDao;
+    private OrderTableRepository orderTableRepository;
 
     @InjectMocks
     private OrderService orderService;
@@ -45,136 +45,145 @@ class OrderServiceTest {
     @Test
     void create() {
         // given
-        final Order order = new Order();
-        order.setOrderTableId(1L);
-        order.setOrderLineItems(List.of(
-            new OrderLineItem() {{
-                setMenuId(1L);
-                setQuantity(1L);
-            }},
-            new OrderLineItem() {{
-                setMenuId(2L);
-                setQuantity(2L);
-            }}
-        ));
+        final List<OrderLineItem> orderLineItems = List.of(new OrderLineItem(1L, 1L, new Menu(1L, "후라이드",
+                                                                                              Collections.emptyList())),
+                                                           new OrderLineItem(2L, 2L, null));
 
-        given(menuDao.countByIdIn(any()))
+        final Order order = new Order(1L, OrderStatus.COOKING, orderLineItems);
+        final OrderTable orderTable = new OrderTable(1L, 10, false, Collections.emptyList());
+
+        given(menuRepository.countByIds(any()))
             .willReturn(2L);
-        given(orderTableDao.findById(any()))
-            .willReturn(Optional.of(new OrderTable() {{
-                setId(1L);
-                setEmpty(false);
-            }}));
-        given(orderDao.save(any()))
-            .willReturn(new Order() {{
-                setId(1L);
-                setOrderTableId(1L);
-                setOrderStatus(OrderStatus.COOKING.name());
-                setOrderedTime(LocalDateTime.now());
-            }});
+        given(orderTableRepository.getById(any()))
+            .willReturn(orderTable);
+        given(orderRepository.save(any()))
+            .willReturn(order);
 
         // when
-        final Order created = orderService.create(order);
+        final OrderResponse created = orderService.create(new OrderCreateRequest(orderTable.getId(), List.of(
+            new OrderLineItemCreateRequest(1L, 1L),
+            new OrderLineItemCreateRequest(2L, 2L)
+        )));
 
         // then
-        assertThat(created.getId()).isEqualTo(1L);
-        assertThat(created.getOrderTableId()).isEqualTo(1L);
-        assertThat(created.getOrderStatus()).isEqualTo(OrderStatus.COOKING.name());
-        assertThat(created.getOrderedTime()).isNotNull();
+        assertThat(created.getId()).isEqualTo(order.getId());
+        assertThat(created.getOrderStatus()).isEqualTo(order.getOrderStatus().name());
     }
 
     @DisplayName("주문의 주문 항목이 없으면 예외가 발생한다.")
     @Test
     void create_emptyOrderLineItems() {
         // given
-        final Order order = new Order();
-        order.setOrderLineItems(List.of());
+        final OrderCreateRequest cooking = new OrderCreateRequest(1L, Collections.emptyList());
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.create(order))
-            .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(cooking)).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴의 개수가 저장된 메뉴의 개수와 다르면 예외가 발생한다.")
     @Test
     void create_differentMenuSize() {
         // given
-        final Order order = new Order();
-        order.setOrderLineItems(List.of(
-            new OrderLineItem() {{
-                setMenuId(1L);
-                setQuantity(1L);
-            }},
-            new OrderLineItem() {{
-                setMenuId(2L);
-                setQuantity(2L);
-            }}
-        ));
-
-        given(menuDao.countByIdIn(any()))
+        given(menuRepository.countByIds(any()))
             .willReturn(1L);
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.create(order))
-            .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(new OrderCreateRequest(1L, List.of(
+            new OrderLineItemCreateRequest(1L, 1L),
+            new OrderLineItemCreateRequest(2L, 2L)
+        )))).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("주문 테이블이 존재하지 않으면 예외가 발생한다.")
     @Test
     void create_failNotExistOrderTable() {
         // given
-        final Order order = new Order();
-        order.setOrderLineItems(List.of(
-            new OrderLineItem() {{
-                setMenuId(1L);
-                setQuantity(1L);
-            }},
-            new OrderLineItem() {{
-                setMenuId(2L);
-                setQuantity(2L);
-            }}
-        ));
-        order.setOrderTableId(0L);
-        given(menuDao.countByIdIn(any()))
+        final long notExistOrderTable = 0L;
+        given(menuRepository.countByIds(any()))
             .willReturn(2L);
-        given(orderTableDao.findById(any()))
-            .willReturn(Optional.empty());
+        given(orderTableRepository.getById(notExistOrderTable))
+            .willThrow(IllegalArgumentException.class);
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.create(order))
-            .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(new OrderCreateRequest(notExistOrderTable, List.of(
+            new OrderLineItemCreateRequest(1L, 1L),
+            new OrderLineItemCreateRequest(2L, 2L)
+        )))).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("주문 테이블이 비어 있으면 예외가 발생한다.")
     @Test
     void create_failEmptyOrderTable() {
         // given
-        final Order order = new Order();
-        order.setOrderLineItems(List.of(
-            new OrderLineItem() {{
-                setMenuId(1L);
-                setQuantity(1L);
-            }},
-            new OrderLineItem() {{
-                setMenuId(2L);
-                setQuantity(2L);
-            }}
-        ));
-        order.setOrderTableId(1L);
-        given(menuDao.countByIdIn(any()))
+        given(orderTableRepository.getById(any()))
+            .willReturn(new OrderTable(1L, 10, true, Collections.emptyList()));
+        given(menuRepository.countByIds(any()))
             .willReturn(2L);
-        given(orderTableDao.findById(any()))
-            .willReturn(Optional.of(new OrderTable() {{
-                setId(1L);
-                setEmpty(true);
-            }}));
+        given(menuRepository.getById(any()))
+            .willReturn(new Menu(1L, "후라이드", Collections.emptyList()))
+            .willReturn(new Menu(2L, "양념", Collections.emptyList()));
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.create(order))
+        assertThatThrownBy(() -> orderService.create(new OrderCreateRequest(1L, List.of(
+            new OrderLineItemCreateRequest(1L, 1L),
+            new OrderLineItemCreateRequest(2L, 2L)
+        )))).isInstanceOf(IllegalArgumentException.class);
+    }
+
+    @DisplayName("주문 테이블의 상태를 변경한다.")
+    @Test
+    void changeOrderStatus() {
+        // given
+        final Order order = new Order(1L, OrderStatus.COOKING, List.of(
+            new OrderLineItem(1L, 1L, null),
+            new OrderLineItem(2L, 2L, null)
+        ));
+
+        given(orderRepository.getById(any()))
+            .willReturn(order);
+
+        // when
+        final OrderResponse changed = orderService.changeOrderStatus(order.getId(),
+                                                                     new OrderChangeOrderStatusRequest("COMPLETION"));
+
+        // then
+        assertThat(changed.getId()).isEqualTo(order.getId());
+        assertThat(changed.getOrderStatus()).isEqualTo(OrderStatus.COMPLETION.name());
+    }
+
+    @DisplayName("주문이 존재하지 않으면 예외가 발생한다.")
+    @Test
+    void changeOrderStatus_failNotExistOrder() {
+        // given
+        final Long orderId = 0L;
+        given(orderRepository.getById(orderId))
+            .willThrow(IllegalArgumentException.class);
+
+        // when
+        // then
+        assertThatThrownBy(() -> orderService.changeOrderStatus(orderId, new OrderChangeOrderStatusRequest("COOKING")))
+            .isInstanceOf(IllegalArgumentException.class);
+    }
+
+    @DisplayName("주문 상태가 COMPLETION 이면 예외가 발생한다.")
+    @Test
+    void changeOrderStatus_failStatusIsCompletion() {
+        // given
+        final Long orderTableId = 1L;
+        final Order order = new Order(1L, OrderStatus.COMPLETION,
+                                      List.of(new OrderLineItem(1L, 1L, null)));
+
+        given(orderRepository.getById(order.getId()))
+            .willReturn(order);
+
+        // when
+        // then
+        assertThatThrownBy(
+            () -> orderService.changeOrderStatus(orderTableId, new OrderChangeOrderStatusRequest("COMPLETION")))
             .isInstanceOf(IllegalArgumentException.class);
     }
 }
