@@ -1,17 +1,21 @@
 package kitchenpos.application;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 
+import java.util.Collections;
 import java.util.List;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderTableDao;
-import kitchenpos.dao.TableGroupDao;
+import kitchenpos.application.dto.OrderTableIdRequest;
+import kitchenpos.application.dto.TableGroupCreateRequest;
+import kitchenpos.domain.Order;
+import kitchenpos.domain.OrderLineItem;
+import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.TableGroup;
+import kitchenpos.repository.OrderTableRepository;
+import kitchenpos.repository.TableGroupRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -23,13 +27,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class TableGroupServiceTest {
 
     @Mock
-    private OrderDao orderDao;
+    private OrderTableRepository orderTableRepository;
 
     @Mock
-    private OrderTableDao orderTableDao;
-
-    @Mock
-    private TableGroupDao tableGroupDao;
+    private TableGroupRepository tableGroupRepository;
 
     @InjectMocks
     private TableGroupService tableGroupService;
@@ -38,67 +39,29 @@ class TableGroupServiceTest {
     @Test
     void create() {
         // given
-        final TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(List.of(
-            new OrderTable() {{
-                setId(1L);
-                setEmpty(true);
-            }},
-            new OrderTable() {{
-                setId(2L);
-                setEmpty(true);
-            }}
-        ));
+        final List<OrderTable> orderTables = List.of(
+            new OrderTable(1L, 2, true, Collections.emptyList()),
+            new OrderTable(2L, 2, true, Collections.emptyList())
+        );
 
-        given(orderTableDao.findAllByIdIn(any()))
-            .willReturn(List.of(
-                new OrderTable() {{
-                    setId(1L);
-                    setEmpty(true);
-                }},
-                new OrderTable() {{
-                    setId(2L);
-                    setEmpty(true);
-                }}
-            ));
-
-        given(tableGroupDao.save(any()))
-            .willReturn(new TableGroup() {{
-                setId(1L);
-                setOrderTables(List.of(
-                    new OrderTable() {{
-                        setId(1L);
-                        setEmpty(false);
-                    }},
-                    new OrderTable() {{
-                        setId(2L);
-                        setEmpty(false);
-                    }}
-                ));
-            }});
+        given(orderTableRepository.getAllById(any()))
+            .willReturn(orderTables);
 
         // when
-        final TableGroup savedTableGroup = tableGroupService.create(tableGroup);
-
         // then
-        assertThat(savedTableGroup.getId()).isEqualTo(1L);
-        assertThat(savedTableGroup.getOrderTables()).hasSize(2);
-        assertThat(savedTableGroup.getOrderTables().get(0).getId()).isEqualTo(1L);
-        assertThat(savedTableGroup.getOrderTables().get(0).isEmpty()).isFalse();
-        assertThat(savedTableGroup.getOrderTables().get(1).getId()).isEqualTo(2L);
-        assertThat(savedTableGroup.getOrderTables().get(1).isEmpty()).isFalse();
+        assertDoesNotThrow(() -> tableGroupService.create(new TableGroupCreateRequest(List.of(
+            new OrderTableIdRequest(1L),
+            new OrderTableIdRequest(2L)
+        ))));
     }
 
     @DisplayName("테이블 그룹의 테이블이 비어있으면 예외가 발생한다.")
     @Test
     void create_failEmptyTables() {
         // given
-        final TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(List.of());
-
         // when
         // then
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+        assertThatThrownBy(() -> tableGroupService.create(new TableGroupCreateRequest(Collections.emptyList())))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -106,164 +69,103 @@ class TableGroupServiceTest {
     @Test
     void create_failOneTable() {
         // given
-        final TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(List.of(
-            new OrderTable() {{
-                setId(1L);
-                setEmpty(true);
-            }}
-        ));
+        given(orderTableRepository.getAllById(any()))
+            .willReturn(List.of(
+                new OrderTable(1L, 2, true, Collections.emptyList())
+            ));
 
         // when
         // then
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-            .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(new TableGroupCreateRequest(List.of(
+            new OrderTableIdRequest(1L)
+        )))).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("테이블 개수가 저장된 테이블 개수와 다르면 예외가 발생한다.")
     @Test
     void create_failDifferentSize() {
         // given
-        final TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(List.of(
-            new OrderTable() {{
-                setId(1L);
-                setEmpty(true);
-            }},
-            new OrderTable() {{
-                setId(2L);
-                setEmpty(true);
-            }}
-        ));
-
-        given(orderTableDao.findAllByIdIn(any()))
+        given(orderTableRepository.getAllById(any()))
             .willReturn(List.of(
-                new OrderTable() {{
-                    setId(1L);
-                    setEmpty(true);
-                }}
+                new OrderTable(1L, 2, true, Collections.emptyList())
             ));
 
         // when
         // then
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-            .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(new TableGroupCreateRequest(List.of(
+            new OrderTableIdRequest(1L),
+            new OrderTableIdRequest(2L)
+        )))).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("포함된 테이블들이 비어있지 않으면 예외가 발생한다.")
     @Test
     void create_failNotEmptyTable() {
         // given
-        final TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(List.of(
-            new OrderTable() {{
-                setId(1L);
-                setEmpty(false);
-            }},
-            new OrderTable() {{
-                setId(2L);
-                setEmpty(true);
-            }}
-        ));
+        final List<OrderTable> orderTables = List.of(
+            new OrderTable(1L, 2, false, Collections.emptyList()),
+            new OrderTable(2L, 2, true, Collections.emptyList())
+        );
+
+        given(orderTableRepository.getAllById(any()))
+            .willReturn(orderTables);
 
         // when
         // then
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-            .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(new TableGroupCreateRequest(List.of(
+            new OrderTableIdRequest(1L),
+            new OrderTableIdRequest(2L)
+        )))).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("테이블들의 tableGroupId 가 null 이 아니면 예외가 발생한다.")
     @Test
     void create_failNotEmptyGroupId() {
         // given
-        final TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(List.of(
-            new OrderTable() {{
-                setId(1L);
-                setEmpty(true);
-                setTableGroupId(1L);
-            }},
-            new OrderTable() {{
-                setId(2L);
-                setEmpty(true);
-                setTableGroupId(1L);
-            }}
-        ));
-
-        given(orderTableDao.findAllByIdIn(any()))
-            .willReturn(List.of(
-                new OrderTable() {{
-                    setId(1L);
-                    setEmpty(true);
-                    setTableGroupId(1L);
-                }},
-                new OrderTable() {{
-                    setId(2L);
-                    setEmpty(true);
-                    setTableGroupId(1L);
-                }}
-            ));
-
         // when
         // then
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-            .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(new TableGroupCreateRequest(List.of(
+            new OrderTableIdRequest(1L),
+            new OrderTableIdRequest(2L)
+        )))).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("테이블 그룹을 해제한다.")
     @Test
     void ungroup() {
         // given
-        final Long tableGroupId = 1L;
+        final List<OrderTable> orderTables = List.of(
+            new OrderTable(1L, 2, true, Collections.emptyList()),
+            new OrderTable(2L, 2, true, Collections.emptyList())
+        );
+        final TableGroup tableGroup = new TableGroup(1L, orderTables);
 
-        given(orderTableDao.findAllByTableGroupId(any()))
-            .willReturn(List.of(
-                new OrderTable() {{
-                    setId(1L);
-                    setEmpty(false);
-
-                    setTableGroupId(tableGroupId);
-                }},
-                new OrderTable() {{
-                    setId(2L);
-                    setEmpty(false);
-                    setTableGroupId(tableGroupId);
-                }}
-            ));
-
-        given(orderDao.existsByOrderTableIdInAndOrderStatusIn(any(), any()))
-            .willReturn(false);
+        given(tableGroupRepository.getById(any()))
+            .willReturn(tableGroup);
 
         // when
         // then
-        assertDoesNotThrow(() -> tableGroupService.ungroup(tableGroupId));
+        assertDoesNotThrow(() -> tableGroupService.ungroup(1L));
     }
 
     @DisplayName("주문이 COMPLETION 상태가 아니면 예외가 발생한다.")
     @Test
     void ungroup_failNotOrderEnd() {
         // given
-        final Long tableGroupId = 1L;
-        given(orderTableDao.findAllByTableGroupId(any()))
-            .willReturn(List.of(
-                new OrderTable() {{
-                    setId(1L);
-                    setEmpty(false);
-                    setTableGroupId(tableGroupId);
-                }},
-                new OrderTable() {{
-                    setId(2L);
-                    setEmpty(false);
-                    setTableGroupId(tableGroupId);
-                }}
-            ));
+        final List<OrderTable> orderTables = List.of(
+            new OrderTable(1L, 2, true, List.of(new Order(1L, OrderStatus.COOKING,
+                                                           List.of(new OrderLineItem(1L, 1L, null))))),
+            new OrderTable(2L, 2, true, List.of(new Order(1L, OrderStatus.COOKING,
+                                                           List.of(new OrderLineItem(1L, 1L, null)))))
+        );
+        final TableGroup tableGroup = new TableGroup(1L, orderTables);
 
-        given(orderDao.existsByOrderTableIdInAndOrderStatusIn(any(), any()))
-            .willReturn(true);
+        given(tableGroupRepository.getById(any()))
+            .willReturn(tableGroup);
 
         // when
         // then
-        assertThatThrownBy(() -> tableGroupService.ungroup(tableGroupId))
+        assertThatThrownBy(() -> tableGroupService.ungroup(tableGroup.getId()))
             .isInstanceOf(IllegalArgumentException.class);
     }
 }
