@@ -2,15 +2,18 @@ package kitchenpos.application;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderTableDao;
+import kitchenpos.application.dto.OrderTableResponse;
+import kitchenpos.application.dto.OrderTableUpdateEmptyRequest;
+import kitchenpos.application.dto.OrderTableUpdateNumberOfGuestsRequest;
+import kitchenpos.domain.Order;
+import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.repository.OrderTableRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -22,86 +25,22 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class TableServiceTest {
 
     @Mock
-    private OrderDao orderDao;
-
-    @Mock
-    private OrderTableDao orderTableDao;
+    private OrderTableRepository orderTableRepository;
 
     @InjectMocks
     private TableService tableService;
 
-    @DisplayName("테이블을 생성한다.")
+    @DisplayName("주문 테이블이 존재하지 않으면 예외가 발생한다.")
     @Test
-    void create() {
+    void changeEmpty_failNotExistOrderTable() {
         // given
-        final OrderTable orderTable = new OrderTable();
-
-        given(orderTableDao.save(orderTable))
-            .willReturn(new OrderTable() {{
-                setId(1L);
-            }});
-
-        // when
-        final OrderTable savedOrderTable = tableService.create(orderTable);
-
-        // then
-        assertThat(savedOrderTable.getId()).isEqualTo(1L);
-    }
-
-    @DisplayName("주문 테이블을 비어 있는 상태로 바꾼다.")
-    @Test
-    void changeEmpty() {
-        // given
-        final Long orderTableId = 1L;
-        final OrderTable orderTable = new OrderTable() {{
-            setId(orderTableId);
-            setEmpty(true);
-        }};
-
-        given(orderTableDao.findById(orderTableId))
-            .willReturn(Optional.of(new OrderTable() {{
-                setId(orderTableId);
-                setEmpty(false);
-            }}));
-
-        given(orderDao.existsByOrderTableIdAndOrderStatusIn(orderTableId, List.of(OrderStatus.COOKING.name(),
-                                                                                  OrderStatus.MEAL.name())))
-            .willReturn(false);
-
-        given(orderTableDao.save(any(OrderTable.class)))
-            .willReturn(new OrderTable() {{
-                setId(orderTableId);
-                setEmpty(true);
-            }});
-
-        // when
-        final OrderTable savedOrderTable = tableService.changeEmpty(orderTableId, orderTable);
-
-        // then
-        assertThat(savedOrderTable.isEmpty()).isTrue();
-        assertThat(savedOrderTable.getId()).isEqualTo(orderTableId);
-    }
-
-    @DisplayName("주문 테이블의 tableGroupId 가 존재하면 예외가 발생한다.")
-    @Test
-    void changeEmpty_failExistTableGroupId() {
-        // given
-        final Long orderTableId = 1L;
-        final OrderTable orderTable = new OrderTable() {{
-            setId(orderTableId);
-            setEmpty(true);
-        }};
-
-        given(orderTableDao.findById(orderTableId))
-            .willReturn(Optional.of(new OrderTable() {{
-                setId(orderTableId);
-                setEmpty(false);
-                setTableGroupId(1L);
-            }}));
+        final Long notExistedTableId = 0L;
+        given(orderTableRepository.getById(notExistedTableId))
+            .willThrow(IllegalArgumentException.class);
 
         // when
         // then
-        assertThatThrownBy(() -> tableService.changeEmpty(orderTableId, orderTable))
+        assertThatThrownBy(() -> tableService.changeEmpty(notExistedTableId, new OrderTableUpdateEmptyRequest(true)))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -110,24 +49,15 @@ class TableServiceTest {
     void changeEmpty_failNotCompletionStatus() {
         // given
         final Long orderTableId = 1L;
-        final OrderTable orderTable = new OrderTable() {{
-            setId(orderTableId);
-            setEmpty(true);
-        }};
+        final int numberOfGuests = 2;
 
-        given(orderTableDao.findById(orderTableId))
-            .willReturn(Optional.of(new OrderTable() {{
-                setId(orderTableId);
-                setEmpty(false);
-            }}));
-
-        given(orderDao.existsByOrderTableIdAndOrderStatusIn(orderTableId, List.of(OrderStatus.COOKING.name(),
-                                                                                  OrderStatus.MEAL.name())))
-            .willReturn(true);
+        given(orderTableRepository.getById(orderTableId))
+            .willReturn(new OrderTable(orderTableId, numberOfGuests, false, Collections.singletonList(
+                new Order(1L, OrderStatus.COOKING, List.of(new OrderLineItem(1L, 1L, null))))));
 
         // when
         // then
-        assertThatThrownBy(() -> tableService.changeEmpty(orderTableId, orderTable))
+        assertThatThrownBy(() -> tableService.changeEmpty(orderTableId, new OrderTableUpdateEmptyRequest(true)))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -136,31 +66,20 @@ class TableServiceTest {
     void changeNumberOfGuests() {
         // given
         final Long orderTableId = 1L;
-        final OrderTable orderTable = new OrderTable() {{
-            setId(orderTableId);
-            setNumberOfGuests(5);
-        }};
+        final int numberOfGuests = 5;
 
-        given(orderTableDao.findById(orderTableId))
-            .willReturn(Optional.of(new OrderTable() {{
-                setId(orderTableId);
-                setNumberOfGuests(1);
-                setEmpty(false);
-            }}));
-
-        given(orderTableDao.save(any(OrderTable.class)))
-            .willReturn(new OrderTable() {{
-                setId(orderTableId);
-                setEmpty(false);
-                setNumberOfGuests(5);
-            }});
+        final int previousNumberOfGuests = 1;
+        given(orderTableRepository.getById(orderTableId))
+            .willReturn(
+                new OrderTable(orderTableId, previousNumberOfGuests, false, Collections.emptyList()));
 
         // when
-        final OrderTable savedOrderTable = tableService.changeNumberOfGuests(orderTableId, orderTable);
+        final OrderTableResponse savedOrderTable = tableService.changeNumberOfGuests(orderTableId,
+                                                                                     new OrderTableUpdateNumberOfGuestsRequest(
+                                                                                         numberOfGuests));
 
         // then
-        assertThat(savedOrderTable.getNumberOfGuests()).isEqualTo(5);
-        assertThat(savedOrderTable.getId()).isEqualTo(orderTableId);
+        assertThat(savedOrderTable.getNumberOfGuests()).isEqualTo(numberOfGuests);
     }
 
     @DisplayName("손님 수가 음수이면 예외가 발생한다.")
@@ -168,14 +87,13 @@ class TableServiceTest {
     void changeNumberOfGuests_failNegativeNumberOfGuests() {
         // given
         final Long orderTableId = 1L;
-        final OrderTable orderTable = new OrderTable() {{
-            setId(orderTableId);
-            setNumberOfGuests(-1);
-        }};
+        given(orderTableRepository.getById(orderTableId))
+            .willReturn(new OrderTable(orderTableId, 1, false, Collections.emptyList()));
 
         // when
         // then
-        assertThatThrownBy(() -> tableService.changeNumberOfGuests(orderTableId, orderTable))
+        assertThatThrownBy(
+            () -> tableService.changeNumberOfGuests(orderTableId, new OrderTableUpdateNumberOfGuestsRequest(-10)))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -184,17 +102,13 @@ class TableServiceTest {
     void changeNumberOfGuests_failNotExistOrderTable() {
         // given
         final Long notExistedTableId = 0L;
-        final OrderTable orderTable = new OrderTable() {{
-            setId(notExistedTableId);
-            setNumberOfGuests(5);
-        }};
-
-        given(orderTableDao.findById(notExistedTableId))
-            .willReturn(Optional.empty());
+        given(orderTableRepository.getById(notExistedTableId))
+            .willThrow(IllegalArgumentException.class);
 
         // when
         // then
-        assertThatThrownBy(() -> tableService.changeNumberOfGuests(notExistedTableId, orderTable))
+        assertThatThrownBy(
+            () -> tableService.changeNumberOfGuests(notExistedTableId, new OrderTableUpdateNumberOfGuestsRequest(1)))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -203,21 +117,18 @@ class TableServiceTest {
     void changeNumberOfGuests_failEmptyTable() {
         // given
         final Long orderTableId = 1L;
-        final OrderTable orderTable = new OrderTable() {{
-            setId(orderTableId);
-            setNumberOfGuests(5);
-        }};
+        final int numberOfGuests = 5;
 
-        given(orderTableDao.findById(orderTableId))
-            .willReturn(Optional.of(new OrderTable() {{
-                setId(orderTableId);
-                setNumberOfGuests(1);
-                setEmpty(true);
-            }}));
+        final int previousNumberOfGuests = 1;
+        given(orderTableRepository.getById(orderTableId))
+            .willReturn(
+                new OrderTable(orderTableId, previousNumberOfGuests, true, Collections.emptyList()));
 
         // when
         // then
-        assertThatThrownBy(() -> tableService.changeNumberOfGuests(orderTableId, orderTable))
+        assertThatThrownBy(
+            () -> tableService.changeNumberOfGuests(orderTableId,
+                                                    new OrderTableUpdateNumberOfGuestsRequest(numberOfGuests)))
             .isInstanceOf(IllegalArgumentException.class);
     }
 }
